Mon Aug 23 22:03:25 BST 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Use the new replace_document(term, doc) method.

Sun Aug 22 13:11:23 BST 2004  Olly Betts <olly@survex.com>

	* configure.in,configure.ac: Renamed configure.in to configure.ac.

Sat Aug 21 12:41:43 BST 2004  Olly Betts <olly@survex.com>

	* docs/omegascript.txt: Added note about that $add{$hit,1} gives
	  the "hit number".

Fri Aug 20 20:28:16 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Link with -lxapianqueryparser, not -lomqueryparser.

Thu Aug 19 19:13:34 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: And actually ship htdig2omega and htdig2omega.script!

Thu Aug 19 19:02:40 BST 2004  Olly Betts <olly@survex.com>

	* htdig2omega,htdig2omega.script: Added perl script and corresponding
	  scriptindex index script which allow an ht://dig database to be
	  imported into Xapian.  This provides an easy way to provide a search
	  of remote websites using omega (by spidering them with ht://dig).

Sun Aug 15 01:48:58 BST 2004  Olly Betts <olly@survex.com>

	* indextext.cc,indextext.h,omindex.cc,query.cc,scriptindex.cc,
	  symboltab.h: Fixed $highlight to understand accented characters
	  (bug#9).

Wed Jun 30 14:58:12 BST 2004  Olly Betts <olly@survex.com>

	* NEWS,configure.in: Version 0.8.1.

Tue Jun 29 17:26:41 BST 2004  Richard Boulton <richard@tartarus.org>

	* Makefile.am: Remove Debian files from distribution tarballs,
	  since there will often be multiple patch releases for each
	  release.  Debian files will be available from an apt repository
	  in future.

Tue Jun 29 01:45:06 BST 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Renamed hash() to hash_string() to avoid colliding
	  with something on IRIX;  Removed explicit initialisation of
	  mime_types - perhaps that's spooking the SGI CC prelinker.

Sun Jun 27 23:47:35 BST 2004  Olly Betts <olly@survex.com>

	* omega.cc: Change MORELIKE to pick up to 40 terms, rather than up to